Added onclick selection of shortened url

--- a/templates/results.html
+++ b/templates/results.html
@@ -39,7 +39,7 @@
   <div id="myform">
   <h1>URL shortened!</h1>
   <form>
-    <input type="text" name="surl" value="{{final_url}}">
+    <input type="text" name="surl" value="{{final_url}}" onclick="this.select;"/>
   </form>
   <p>An open source project by <a href="https://github.com/waseem18">Wasim Thabraze</p>
   </div>
