--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -25,7 +25,7 @@
     clear: both;
   }
 
-  input {
+  #input {
     width: 800;
     color: #CCCCCC;
     padding: 4px;
@@ -33,15 +33,22 @@
     font-size: 1.2em;
     border: 2px solid #CCCCCC;
   }
+
+  #sub {
+    color: #CCCCCC;
+    font-size: 1.3em;
+    margin: 0px 4px 0px 4px;
+  }
   </style>
 </head>
 <body>
   <div id="myform">
   <h1>Shorten it!</h1>
   <form method="post">
-    <input type="text" name="lurl">
-    <input type="submit">
+    <input type="text" name="lurl" id="input">
+    <input type="submit" value="Shorten" id="sub">
   </form>
+
   <p>An open source project by <a href="https://github.com/waseem18">Wasim Thabraze</p>
   </div>
 </body>
